# wotcha

./: LICENSE  capture.py  hook_runner.py  main.py  pyproject.toml
evaluation/: bandit.py  dataset.py
monitor/: llm.py  models.py  monitor.py  sources.py  store.py  triage.py
tests/: test_bandit.py  test_capture.py  test_monitor.py  test_sources.py  test_store.py  test_triage.py
