[project]
name = "wotcha"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "bandit>=1.9.4",
    "httpx>=0.28.1",
    "inspect-ai>=0.3.205",
    "pydantic>=2.12.5",
    "typer>=0.24.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
